[package]
name = "asynchron"
version = "0.1.1"
authors = ["Ar37-rs <adyaro37@gmail.com>"]
edition = "2018"
description = "Asynchronize blocking operation."
documentation = "https://docs.rs/asynchron"
readme = "README.md"
keywords = ["async", "sync", "std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Ar37-rs/asynchron"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.parking_lot]
version = "0.11"
