[package]
name = "fltk_fetch_reqwest"
version = "0.9.0"
authors = ["Ar37-rs <adyaro37@gmail.com>"]
edition = "2018"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asynchron = "0.9"
# asynchron = { path = "../../../asynchron" }
fltk = { version = "1" }
reqwest = "0.11"
tokio = { version = "1", features = ["rt-multi-thread"] }
