[package]
name = "fltk_fetch_reqwest"
version = "0.9.1"
authors = ["Ar37-rs <adyaro37@gmail.com>"]
edition = "2018"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asynchron = "0.9"
# asynchron = { path = "../../../asynchron" }
# With fltk-bundled (faster build time) features work on windows, linux and mac x64 only (requires curl and tar)
# fltk = { version = "1", features = ["fltk-bundled"] }
fltk = "1"
ureq = "2"
