[package]
name = "fltk_parallel_plotters"
version = "0.9.1"
authors = ["Ar37-rs <adyaro37@gmail.com>"]
edition = "2018"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = { version = "1" }
plotters = "0.3"
plotters-bitmap = "0.3"
asynchron = "0.9"